# EconomyCards

./: .gitignore  CMakeLists.txt  README.md
include/: background.hpp  card.hpp  deck.hpp  hand.hpp  market.hpp  player.hpp
src/: background.cpp  card.cpp  deck.cpp  hand.cpp  player.cpp
tests/: test_card_deck.cpp
